# RiichiEnv

./: .gitignore  README.md  experience.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
demos/: replay_debug.ipynb  replay_demo.ipynb
docs/: DEVELOPMENT_GUIDE.md  SEQUENCE_FEATURE_ENCODING.md
native/: Cargo.toml
native/src/: action.rs  errors.rs  hand_evaluator.rs  lib.rs  observation.rs  parser.rs  rule.rs  score.rs  tests.rs  types.rs
native/src/replay/: mjai_replay.rs  mjsoul_replay.rs  mod.rs
native/src/state/: mod.rs
riichienv-core/: Cargo.toml
riichienv-core/src/: action.rs  hand_evaluator_3p.rs  score.rs  tests.rs
riichienv-core/src/observation/: encode.rs  mod.rs  python.rs  sequence_features.rs
riichienv-core/src/observation_3p/: encode.rs  helpers.rs  mod.rs  python.rs
riichienv-core/src/replay/: mjai_replay.rs  mjsoul_replay.rs  mod.rs
riichienv-ml/: .gitignore  README.md  pyproject.toml
riichienv-ml/scripts/: import_mjai_zip.py  infer_riichienv.py  test_bc_3p.py  train_bc.py  train_cql.py  train_ppo.py  upload_hf_weights.py
riichienv-python/: Cargo.toml
riichienv-python/src/: env.rs
riichienv-ui/: package-lock.json  package.json
riichienv-ui/demos/: README.md  replay_demo.ipynb  replay_penalty_display.ipynb
riichienv-ui/src/: config.ts  game_state.ts  styles_3d.ts
riichienv-wasm/: Cargo.toml
src/riichienv/: __init__.py  _riichienv.pyi  consts.py  hand.py
tests/: test_core.py  test_metadata_injection.py  test_shanten.py
tests/env/: test_sanma.py
tools/mjsoul-scoring-validation/: validate_env_3p.py
(+49 files in other folders)
