[package]
name = "riichienv"
version = "0.2.1"
edition = "2021"

[lib]
name = "_riichienv"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
ndarray = "0.17"
ahash = "0.8"
base64 = "0.22"

[features]
default = []
python = ["dep:pyo3"]
extension-module = ["python", "pyo3/extension-module"]
