[package]
name = "riichienv-wasm"
version = "0.3.4"
edition = "2021"
license = "Apache-2.0"
description = "WASM bindings for RiichiEnv mahjong game engine"

[lib]
crate-type = ["cdylib"]

[dependencies]
riichienv-core = { path = "../riichienv-core", default-features = false, features = ["wasm"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
